# de-zoomcamp

./: .gitignore  README.md  pyproject.toml
dbt-models/: README.md  dbt_project.yml
dbt-models/macros/: get_payment_type_description.sql  macros_properties.yml
dbt-models/models/core/: dim_monthly_zone_revenue.sql  dim_zones.sql  fact_trips.sql  fhv_fact_trips.sql  schema.yml
dbt-models/models/staging/: schema.yml  stg_fhv_taxi_trips.sql  stg_green_taxi_trips.sql  (+1 more)
w1-intro/: Dockerfile  README.md  docker-compose.yaml  green_taxi.ipynb  ingest_data.py  run_docker_ingest.sh  run_local_ingest.sh  run_pgadmin.sh  run_postgres.sh
w1-intro/terraform/: README.md  main.tf  variables.tf
w2-orchestration/: .prefectignore  README.md  build_gcs_bq_docker.sh  build_web_gcs_cloud.sh  build_web_gcs_deploy.sh  build_web_gcs_remote.sh  etl_gcs_bq.py  etl_web_gcs.py  generator_demo.ipynb  ingest_data.py  parametrize_flow.py  web-gcs-bq.yaml  web-gcs-cloud.yaml  web-gcs-deployment.yaml  web-gcs-gh-deployment.yaml  web-gcs-remote.yaml
w2-orchestration/blocks/: make_docker_runner.py  make_gcs_bucket.py  make_gh_repo.py
w3-bigquery/: Dockerfile  README.md  bq.sql  fhv.ipynb  hw.md  run_web_gcs_parq.sh  web_gcs_parq.py  web_gcs_parq_flow.py
w4-analytics-eng/: README.md  hw.md
w5-batch/: README.md  cast_partition.py  dataproc_sql.py  download_taxi.sh  hw.ipynb  hw.md  set_schema.ipynb  spark.ipynb  spark_bq_sql.py  spark_bq_sql_submit.sh  spark_cluster.ipynb  spark_gcp.ipynb  spark_rdd.ipynb  spark_sql.py  spark_sql_submit.sh  sql_spark.ipynb
w6-stream/: README.md
