[tool.poetry]
name = "de-zoomcamp"
version = "0.1.0"
description = "Test environment for DE zoomcamp"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "de_zoomcamp"}]

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^1.5.2"
pandas-gbq = "^0.18.1"
SQLAlchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
pgcli = "^3.5.0"
prefect = "~2.7.7"
prefect-sqlalchemy = "~0.2.2"
protobuf = "~4.21.11"
pyarrow = "~10.0.1"
prefect-gcp = {version = "^0.2.4", extras = ["cloud_storage"]}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
jupyterlab = "^3.5.2"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
